using Godot;
using System;

[GlobalClass]
public partial class EnemyMovementData : NPCMovementData
{
    
}