using Godot;
using System;

[GlobalClass]
public partial class NPCMovementData : MovementData
{
 	
}