@startuml Movement Class Structure

title Movement Class Structure

' Method Classes
class MovementDirector <<CharacterBody3D>>{
    == Data ==
    .. Public ..
    + string movementDataPath
    .. Protected ..
    # Vector2 lateralVelocitySnapshot
    # float verticalVelocitySnapshot
    # float gravity
    .. Private ..
    - MovementData movementData
    == Methods ==
    .. Public ..
    + LoadMovementData() : void
    + GetMovementData() : MovementData
    + GetLateralVelocityMag() : float
    .. Protected ..
    # UpdateLateralDirection() : void
    # SetLateralVelocity() : void
    # OrientateBody() : void
    .. Private ..
    - ApplyGravity() : void
}

class PlayerMovementDirector{
    == Data ==
    .. Public ..
    .. Protected ..
    .. Private ..
    - PlayerMovementData movementData
	- Vector2 inputDirection
    == Methods ==
    .. Public ..
    + LoadMovementData() : void
    + GetMovementData() : PlayerMovementData
    .. Protected ..
    # UpdateLateralDirection() : void
    .. Private ..
    - HandleJump() : void
    - HandleDodgeRoll() : void
}

class NPCMovementDirector{
    == Data ==
    .. Public ..
    + Mode mode
    .. Protected ..
    .. Private ..
    - NPCMovementData movementData
    == Methods ==
    .. Public ..
    + LoadMovementData() : void
    + GetMovementData() : NPCMovementData
    .. Protected ..
    .. Private ..
}

class EnemyMovementDirector {
    == Data ==
    .. Public ..
    .. Protected ..
    .. Private ..
    - EnemyMovementData movementData
    - Node3D playerNode
    == Methods ==
    .. Public ..
    + LoadMovementData() : void
    + GetMovementData() : EnemyMovementData
    .. Protected ..
    # UpdateLateralDirection() : void
    .. Private ..
}

MovementDirector <|-- PlayerMovementDirector
MovementDirector <|-- NPCMovementDirector
NPCMovementDirector <|-- EnemyMovementDirector

' Resource Classes
class MovementData <<Resource>> {
    .. Public ..
    + float speed
	+ float acceleration
	+ float friction
	+ float mass
    .. Protected ..
    .. Private ..
}

class PlayerMovementData <<Resource>> {
    .. Public ..
    + float jumpVelocity  
	+ float rotationSpeed
	+ float rotationAcceleration
	+ float mouseSensitivity
	+ float rollSpeed
    .. Protected ..
    .. Private ..
}

class NPCMovementData <<Resource>> {
    .. Public ..
    .. Protected ..
    .. Private ..
}

class EnemyMovementData <<Resource>> {
    .. Public ..
    .. Protected ..
    .. Private ..
}

MovementData <|-- PlayerMovementData
MovementData <|-- NPCMovementData
NPCMovementData <|-- EnemyMovementData

@enduml